Fixed long usernames overflowing container in user navigation

--- a/resources/assets/css/_dimensions.scss
+++ b/resources/assets/css/_dimensions.scss
@@ -65,3 +65,9 @@ body {
 .line-height-1 {
   line-height: 1;
 }
+
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: normal;
+}
